--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
     "name": "bookshelfpremium",
     "version": "1.0.0",
     "main": "index.js",
-    "author": "Andrew Mead",
+    "author": "Danil Christofis",
     "license": "MIT",
     "scripts": {
         "serve": "live-server public/",
